# mcsm-vita

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  build_vpk.ps1
cmake/: sync_vpk.cmake  vita.toolchain.wrapper.cmake
data/mcsm/: README.md
extras/: openssl.cnf
extras/scripts/: get_dump.cmd  get_dump.ps1
lib/falso_jni/: FalsoJNI.c  FalsoJNI_ImplBridge.c  FalsoJNI_ImplBridge.h  FalsoJNI_Logger.c
lib/so_util/: so_util.c  so_util.h
source/: dynlib.c  java.c  java_runtime.h  main.c  patch.c
source/reimpl/: asset_manager.cpp  asset_manager.h  controls.c  controls.h  egl.c  egl.h  errno.c  io.c  io.h  log.c  log.h  mem.c  mem.h  miniz_zlib.c  miniz_zlib.h  opensl_audio.c  pthr.c  pthr.h  sys.c  sys.h
source/reimpl/bits/: _struct_converters.c
source/utils/: config.c  config.h  dialog.c  dialog.h  glutil.c  glutil.h  init.c  launch_state.c  launch_state.h  loading_screen.c  loading_screen.h  logger.c  logger.h  telemetry.c  telemetry.h  utils.c  utils.h
tools/: prepare_data.ps1
